--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
     "cra-template": "1.2.0",
     "md5": "^2.3.0",
     "react": "^18.2.0",
